knife hi res error #42616

Closed
opened 2014-11-16 16:44:56 +01:00 by Alexey · 14 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
knife_hi_res.png
knife_hi_res1.png
knife_hi_res2.png
Exact steps for others to reproduce the error
knife_hi_res_bug.blend
1)subdivede 10 deselect all(after knife using we will have selected new edges)
2)use knife, cut anything
3) zoom in, look closely on created edges - we will see incorrect selection and cut

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![knife_hi_res.png](https://archive.blender.org/developer/F124269/knife_hi_res.png) ![knife_hi_res1.png](https://archive.blender.org/developer/F124271/knife_hi_res1.png) ![knife_hi_res2.png](https://archive.blender.org/developer/F124273/knife_hi_res2.png) **Exact steps for others to reproduce the error** [knife_hi_res_bug.blend](https://archive.blender.org/developer/F124276/knife_hi_res_bug.blend) 1)subdivede 10 deselect all(after knife using we will have selected new edges) 2)use knife, cut anything 3) zoom in, look closely on created edges - we will see incorrect selection and cut
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

cnife_low.png
cnife_low1.png
cnife_low2.png

![cnife_low.png](https://archive.blender.org/developer/F124279/cnife_low.png) ![cnife_low1.png](https://archive.blender.org/developer/F124281/cnife_low1.png) ![cnife_low2.png](https://archive.blender.org/developer/F124283/cnife_low2.png)

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

Could not reproduce on OSX.

kn.png

Could not reproduce on OSX. ![kn.png](https://archive.blender.org/developer/F124331/kn.png)
Author

In #42616#270240, @FloridaJo wrote:
Could not reproduce on OSX.

kn.png

I have windows7

> In #42616#270240, @FloridaJo wrote: > Could not reproduce on OSX. > > ![kn.png](https://archive.blender.org/developer/F124331/kn.png) I have windows7

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

I am getting these issues here on linux 64 with 97e2d62

screen.png

I am getting these issues here on linux 64 with 97e2d62 ![screen.png](https://archive.blender.org/developer/F124439/screen.png)
Campbell Barton was assigned by Sergey Sharybin 2014-11-18 11:04:42 +01:00

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

@ideasman42, could it be another precision issue in the knife tool?

@ideasman42, could it be another precision issue in the knife tool?

The issue as far as I can see isn't exactly a bug (the knife is behaving as intended)

  • The knife is snapping to vertices.
  • When a knife cuts directly along the edge, vertices aren't selected.

When this happens you see gaps in the cut.

If you hold shift (disable snap), the problem isn't so bad, but it still happens.

This can be made to work better from a user perspective - by selecting vertices & edges, even if they aren't newly cut.

The issue as far as I can see isn't exactly a bug (the knife is behaving as intended) - The knife is snapping to vertices. - When a knife cuts directly along the edge, vertices aren't selected. When this happens you see gaps in the cut. If you hold shift (disable snap), the problem isn't so bad, but it still happens. This can be made to work better from a user perspective - by selecting vertices & edges, even if they aren't newly cut.

This issue was referenced by 6fb1e1680b

This issue was referenced by 6fb1e1680bcd1b520bc295c93d4920a13874a8d8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6fb1e1680b.

Closed by commit 6fb1e1680b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42616
No description provided.