Knife: cuts along existing edges are now selected

This means cuts along existing edges don't have gaps in the selection.

Fixes T42616